# uni-plan

./: .clang-format  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING.md  NAMING.md  README.md  build.ps1  build.sh  uni-plan.ini
.agents/hooks/: plan_snippet_antipattern.py
.agents/rules/: upl-plan-snippet-discipline.md
.agents/skills/upl-claude-audit/: SKILL.md
.agents/skills/upl-claude-learn/: SKILL.md
.agents/skills/upl-code-fix/: SKILL.md
.agents/skills/upl-code-refactor/: SKILL.md
.agents/skills/upl-commit/: SKILL.md
.agents/skills/upl-plan-audit/: SKILL.md
.agents/skills/upl-plan-creation/: SKILL.md
.agents/skills/upl-plan-execution/: SKILL.md
.agents/skills/upl-schema-audit/: SKILL.md
.agents/skills/upl-unit-test/: SKILL.md
.agents/skills/upl-validation-creation/: SKILL.md
.agents/skills/upl-watch-panel/: SKILL.md
.claude/: settings.json
.claude/agents/: upl-agent-senior-tester.md
.claude/hooks/: plan_snippet_antipattern.py  upl-auto-format.sh  upl-guard-pragma-once.sh  upl-guard-using-namespace.sh
.claude/hooks/tests/: test_plan_snippet_antipattern.py
.claude/rules/: coding-principles.md  upl-coding-principles.md  upl-naming-enforcement.md
.claude/skills/upl-claude-audit/: SKILL.md
.claude/skills/upl-claude-learn/: SKILL.md
.claude/skills/upl-code-refactor/: SKILL.md
.claude/skills/upl-commit/: SKILL.md
.claude/skills/upl-plan-audit/: SKILL.md
.claude/skills/upl-plan-creation/: SKILL.md
.claude/skills/upl-plan-execution/: SKILL.md
.claude/skills/upl-schema-audit/: SKILL.md
.claude/skills/upl-unit-test/: SKILL.md
.claude/skills/upl-validation-creation/: SKILL.md
.claude/skills/upl-validation-new/: SKILL.md
.claude/skills/upl-watch-panel/: SKILL.md
Docs/: INDEX.md
Docs/Plans/: CliAgentErgonomics.Plan.json
Docs/Proposals/: IMPROVEMENT.Proposal.md
Example/Docs/Plans/: SampleTopic.Plan.json
Schemas/: ChangeLog.Schema.md  Doc.Schema.md  ImplChangeLog.Schema.md  ImplVerification.Schema.md  Implementation.Schema.md  Plan.Schema.json  Plan.Schema.md  PlanChangeLog.Schema.md  PlanVerification.Schema.md  Playbook.Schema.md  PlaybookChangeLog.Schema.md  PlaybookVerification.Schema.md  Verification.Schema.md
Source/: Main.cpp  UniPlanAnalysis.cpp  UniPlanBundleIndex.cpp  UniPlanBundleIndex.h  UniPlanBundleWriteGuard.cpp  UniPlanBundleWriteGuard.h  UniPlanCache.cpp  UniPlanCliConstants.h  UniPlanCommandBundle.cpp  UniPlanCommandCatalog.cpp  UniPlanCommandDispatch.cpp  UniPlanCommandEntity.cpp  UniPlanCommandEntityCrud.cpp  UniPlanCommandEvidence.cpp  UniPlanCommandGraph.cpp  UniPlanCommandHelp.cpp  UniPlanCommandHelp.h  UniPlanCommandHistory.cpp  UniPlanCommandLegacyGap.cpp  UniPlanCommandLifecycle.cpp  UniPlanCommandMigrate.cpp  UniPlanCommandMutation.cpp  UniPlanCommandMutationCommon.cpp  UniPlanCommandMutationCommon.h  UniPlanCommandPhase.cpp  UniPlanCommandPlan.cpp  UniPlanCommandPlanEntries.cpp  UniPlanCommandSearch.cpp  UniPlanCommandSemanticQuery.cpp  UniPlanCommandTopic.cpp  UniPlanCommandValidate.cpp  UniPlanDocumentStore.cpp  UniPlanDocumentStore.h  UniPlanDocumentTypes.h  UniPlanEnums.h  UniPlanFileHelpers.h  UniPlanForwardDecls.h  UniPlanHashHelpers.h  UniPlanHelpers.h  UniPlanInventoryHelpers.h  (+56 more)
Test/: UniPlanTestBundleWriteGuard.cpp  UniPlanTestEndToEnd.cpp  UniPlanTestEntity.cpp  UniPlanTestEvidence.cpp  UniPlanTestFixture.cpp  UniPlanTestFixture.h  UniPlanTestGraph.cpp  UniPlanTestHelp.cpp  UniPlanTestMutation.cpp  UniPlanTestOptionParsing.cpp  UniPlanTestPathHelpers.cpp  UniPlanTestPhaseKind.cpp  UniPlanTestPhaseMetrics.cpp  UniPlanTestPlatform.h  UniPlanTestQuery.cpp  UniPlanTestSemantic.cpp  UniPlanTestValidationContent.cpp  UniPlanTestWatchPerformance.cpp
